--- a/Hybrid NN FashionMNIST Manual Circuits.ipynb
+++ b/Hybrid NN FashionMNIST Manual Circuits.ipynb
@@ -774,6 +774,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "torch.save(model.state_dict(\n",
+        "), 'Models/defaultZZDefaultRealAmp.pth')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 51,
       "metadata": {},
       "outputs": [
